# blackbox

./: CMakeLists.txt  README.md
include/blackbox/: datastore.h  event.h  logger.h  state.h
src/common/: datastore.cpp  logger.cpp
src/plugin/: plugin.cpp  plugin.h  sender.cpp  sender.h  statuswindow.cpp  statuswindow.h  writer.cpp  writer.h
src/server/: main.cpp  receiver.cpp  receiver.h
src/ui/: blackbox.cpp  blackbox.h  landingicon.cpp  line.cpp  line.h  liveindicator.cpp  liveindicator.h  main.cpp  mainwindow.cpp  mainwindow.h  navigraph.cpp  navigraph.h  route.cpp  route.h  routemap.cpp  routemap.h
src/ui/map/: landingicon.cpp  landingicon.h  route.cpp  route.h  routemap.cpp  routemap.h
